--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+ilp64 = [ "mkl-sys/ilp64" ]
+openmp = [ "mkl-sys/openmp" ]
 
 [dependencies]
 mkl-sys = { git = "https://github.com/Andlon/mkl-sys", branch = "master", features = [ "dss" ] }
