Fix broken compile for ilp64

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ openmp = [ "mkl-sys/openmp" ]
 
 [dependencies.mkl-sys]
 git = "https://github.com/Andlon/mkl-sys"
-rev = "e144301e42bf984e28b53026d366cfacbefa6d0f"
+rev = "c197c97319f0784caae26012968c9c7bd76d494b"
 features = [ "dss", "inspector-executor" ]
 
 [dev-dependencies]
 approx = "0.3"
+
+# Make sure that mkl-sys compiles faster by compiling bindgen in release mode
+[profile.dev.package.bindgen]
+opt-level = 2
