Add test with MKL 2020

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -45,3 +45,41 @@ jobs:
       run: |
         source /opt/intel/mkl/bin/mklvars.sh intel64
         cargo test --release --verbose
+
+
+  build_ubuntu_mkl2020:
+
+    name: Test on Ubuntu (MKL 2020.0)
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install MKL
+      run: |
+        wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+        sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+        sudo sh -c 'echo deb https://apt.repos.intel.com/mkl all main > /etc/apt/sources.list.d/intel-mkl.list'
+        sudo apt update
+        sudo apt install intel-mkl-64bit-2020.0-088
+
+    - name: Update Rust
+      run: rustup update
+      
+    - name: Build
+      run: |
+        source /opt/intel/mkl/bin/mklvars.sh intel64
+        cargo build --verbose
+    - name: Run tests (--features "dss")
+      run: |
+        source /opt/intel/mkl/bin/mklvars.sh intel64
+        cargo test --verbose
+    - name: Build (--release)
+      run: |
+        source /opt/intel/mkl/bin/mklvars.sh intel64
+        cargo build --release --verbose
+    - name: Run tests (--release)
+      run: |
+        source /opt/intel/mkl/bin/mklvars.sh intel64
+        cargo test --release --verbose
+        
